--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "grunt": "^1.5.3"
+    "grunt": "^1.5.3",
+    "grunt-contrib-watch": "^1.1.0"
   },
   "name": "ex3-certo-pelo-marcelo",
   "version": "1.0.0",
@@ -40,6 +41,7 @@
     "global-modules": "^1.0.0",
     "global-prefix": "^1.0.2",
     "grunt-cli": "^1.4.3",
+    "grunt-contrib-sass": "^2.0.0",
     "grunt-known-options": "^2.0.0",
     "grunt-legacy-log": "^3.0.0",
     "grunt-legacy-log-utils": "^2.1.0",
@@ -93,6 +95,7 @@
     "resolve-dir": "^1.0.1",
     "rimraf": "^3.0.2",
     "safer-buffer": "^2.1.2",
+    "sass": "^1.86.3",
     "sprintf-js": "^1.0.3",
     "supports-color": "^7.2.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
@@ -106,7 +109,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "grunt":"grunt"
+    "grunt": "grunt"
   },
   "keywords": [],
   "author": "",
